tests/ui/discord-frontend/entity_macro/expected_literal_6.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_6.rs:38:14
   |
LL |     extra = [true],
   |              ^^^^

error: aborting due to 1 previous error

